Implement some changes